[project]
author = "Till Stensitzki"
author_email = "mail.till@gmx.de"
dependencies = [
  "lmfit",
  "matplotlib",
  "numba",
  "numpy",
  "pyqtgraph",
  "qtawesome",
  "qtpy",
  "scipy",
  "attrs",
]
description = "A python application for ultrafast spectroscopy experimental control."
name = "MessPy"
readme = "README.md"
requires_python = ">=3.10"
